--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação WEB ceub</title>
+
+    
 </head>
 <body>
-    
+    <h1> Eu sou título de nivel 1</h1>
+    <h2> Eu sou título de nivel 2</h2>
 </body>
 </html>
