--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <h1> Eu sou título de nivel 1</h1>
     <h2> Eu sou título de nivel 2</h2>
     <p> ola </p>
-    <h1>bdsdbfsbdfsdjfbjdsbfjdsbfjdsjvbfjdsbfds</h1>
+
+    <ol>
+        <li> Eu sou um Item da lista ordenda</li>
+        <li> Eu sou outro item da lista ordenda</li>
+    </ol>
+
+    <ul>
+        <li> Eu sou um Item da lista não ordenda</li>
+        <li> Eu sou outro Item da lista não ordenda</li>
+    </ul>
+     
 </body>
 </html>
