--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <h1> Eu sou título de nivel 1</h1>
     <h2> Eu sou título de nivel 2</h2>
-    <p> ola </p>
+    <p> Eu sou um parágrafo </p>
 
+
+    <!-- eu sou um comentario -->
     <ol>
         <li> Eu sou um Item da lista ordenda</li>
         <li> Eu sou outro item da lista ordenda</li>
