--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     
 </head>
 <body>
-    <h1> Eu sou título de nivel 1</h1>
-    <h2> Eu sou título de nivel 2</h2>
-    <p> Eu sou um parágrafo </p>
+    <h1 style="color: brown;"> Eu sou título de nivel 1</h1>
+    <h2 style="color: crimson;"> Eu sou título de nivel 2</h2>
+    <p style="color: lightblue;"> Eu sou um parágrafo </p>
     <h1> eueue eueeu u bbeueueu</h1>
     <h2> Luccas Gabriel</h2>
     <h3> teste 3</h3>
