--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p style="color: lightblue;"> Eu sou um parágrafo </p>
     <h1> eueue eueeu u bbeueueu</h1>
     <h2> Luccas Gabriel</h2>
-    <h3> teste 3</h3>
+    <h3 style="color: aquamarine;"> teste 3</h3>
  
 
 
