--- a/index.html
+++ b/index.html
@@ -8,12 +8,33 @@
     
 </head>
 <body>
-    <h1 style="color: brown;"> Eu sou título de nivel 1</h1>
-    <h2 style="color: crimson;"> Eu sou título de nivel 2</h2>
+    <h1> Eu sou título de nivel 1</h1>
+    <h2> Eu sou título de nivel 2</h2>
+    <h3> teste 3</h3>
+
     <p style="color: lightblue;"> Eu sou um parágrafo </p>
     <h1> eueue eueeu u bbeueueu</h1>
     <h2> Luccas Gabriel</h2>
-    <h3 style="color: aquamarine;"> teste 3</h3>
+
+    <style>
+
+        h1{
+            color: brown;
+            background-color: burlywood;
+            display: flex;
+            justify-content: center;
+        }
+
+        h2{
+            color: darkred;
+           background-color: burlywood;
+        }
+        h3{
+            color: brown;
+            background-color: burlywood;
+        }
+    </style>
+    
  
 
 
